--- a/src/components/Certs.css
+++ b/src/components/Certs.css
@@ -33,6 +33,15 @@
     width: 150px;
     border-radius: 5px;
     margin-bottom: -25px;
+    transition: 0.3s ease-in-out;
+}
+.certs button:hover {
+    background-color: white !important;
+    border: 1px solid var(--main-color) !important;
+    color: var(--main-color) !important;
+}
+.certs button:hover a {
+    color: var(--main-color) !important;
 }
 .certs button a{
     text-decoration: none;
