--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,6 +1,7 @@
 .header {
     background-color: rgba(0, 0, 0, 0.822);
     padding: 40px;
+    height: fit-content;
 }
 .header h1 {
     color: var(--main-color);
@@ -10,24 +11,4 @@
     letter-spacing: 3px;
     margin-left: 2%;
 
-}
-.header img {
-    height: 200px;
-    width: 200px;
-    max-width: 100%;
-    border: 4px solid var(--main-color);
-    border-bottom-color: rgb(255, 0, 149);
-    border-top-color: rgb(0, 255, 34);
-    border-left-color: rgb(238, 255, 0);
-    border-radius: 50%;
-    margin-left: 10%;
-    animation: myfirst 6s infinite linear;
-}
-@keyframes myfirst {
-    0%{
-        transform: rotate(0deg);
-    }
-    100%{
-        transform: rotate(360deg);
-    }
 }
